<resources>
    <string name="app_name">CalanderMVVM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeHolder">You are not logged in!</string>
    <string name="sign_out_account">Sign out account</string>
    <string name="update">Update</string>
    <string name="event">Event…</string>
    <string name="login_register">Login/Register</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password…</string>
    <string name="password">Password</string>
    <string name="enter_e_mail">Enter E-Mail…</string>
    <string name="e_mail">E-Mail</string>
    <string name="timestamp">Timestamp</string>
    <string name="enter_event">Enter event…</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
</resources>